Ajustes classes, finalizacao transferencia e adicao de depositos
